# Emile

./: CMakeLists.txt  start.sh
CPU/: basicfwd.c  run.sh
CPU/backup/: basicfwd.c
src/: consumer.py  gpu_beta.cu  kernel.cu  main.c  main_base.c
test/: p  p.c
